LNB 계층형 메뉴 sonar 관련 소스 수정